--- a/H1EMU-Redux - BUILD 1/H1EMU-Redux/Properties/Settings.settings
+++ b/H1EMU-Redux - BUILD 1/H1EMU-Redux/Properties/Settings.settings
@@ -14,5 +14,8 @@
     <Setting Name="publishDate" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="patchNotes" Type="System.String" Scope="User">
+      <Value Profile="(Default)" />
+    </Setting>
   </Settings>
 </SettingsFile>
