--- a/H1EMU-Redux - BUILD 1/H1EMU-Redux/H1EMU-Redux.csproj
+++ b/H1EMU-Redux - BUILD 1/H1EMU-Redux/H1EMU-Redux.csproj
@@ -1,14 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0-windows</TargetFramework>
-    <RootNamespace>H1EMU_Redux</RootNamespace>
-    <UseWPF>true</UseWPF>
-	<UseWindowsForms>true</UseWindowsForms>
-	<ApplicationIcon>Icon.ico</ApplicationIcon>
-	<AssemblyVersion>1.10.1</AssemblyVersion>
-	<FileVersion>0.10.1</FileVersion>
+	  <OutputType>WinExe</OutputType>
+	  <TargetFramework>net5.0-windows</TargetFramework>
+	  <RootNamespace>H1EMU_Redux</RootNamespace>
+	  <UseWPF>true</UseWPF>
+	  <UseWindowsForms>true</UseWindowsForms>
+	  <ApplicationIcon>Icon.ico</ApplicationIcon>
+	  <AssemblyVersion>1.10.1</AssemblyVersion>
+	  <FileVersion>0.10.1</FileVersion>
+	  <PublishWithAspNetCoreTargetManifest>false</PublishWithAspNetCoreTargetManifest>
   </PropertyGroup>
 
   <ItemGroup>
@@ -37,6 +38,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Costura.Fody" Version="5.3.0">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="SteamKit2" Version="2.3.0" />
   </ItemGroup>
