--- a/H1EMU-Launcher/H1EMU-Launcher.csproj
+++ b/H1EMU-Launcher/H1EMU-Launcher.csproj
@@ -7,8 +7,8 @@
 	  <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Icon.ico</ApplicationIcon>
-	  <AssemblyVersion>1.11.0</AssemblyVersion>
-	  <FileVersion>1.11.0</FileVersion>
+	  <AssemblyVersion>2.0.0</AssemblyVersion>
+	  <FileVersion>2.0.0</FileVersion>
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
@@ -43,8 +43,12 @@
     <None Remove="Resources\Minimise.png" />
     <None Remove="Resources\Minimise_Hover.png" />
     <None Remove="Resources\Minimise_Pressed.png" />
+    <None Remove="Resources\NextButton.png" />
+    <None Remove="Resources\NextButton_Hover.png" />
     <None Remove="Resources\OfflineImage.png" />
     <None Remove="Resources\Padlock.png" />
+    <None Remove="Resources\PrevButton.png" />
+    <None Remove="Resources\PrevButton_Hover.png" />
     <None Remove="Resources\Server.png" />
     <None Remove="Resources\Server_Hover.png" />
     <None Remove="Resources\Server_Pressed.png" />
@@ -65,7 +69,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Web.WebView2" Version="1.0.864.35" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="SteamKit2" Version="2.3.0" />
     <PackageReference Include="WpfAnimatedGif" Version="2.0.0" />
@@ -94,8 +97,12 @@
     <Content Include="Resources\Minimise.png" />
     <Content Include="Resources\Minimise_Hover.png" />
     <Content Include="Resources\Minimise_Pressed.png" />
+    <Content Include="Resources\NextButton.png" />
+    <Content Include="Resources\NextButton_Hover.png" />
     <Content Include="Resources\OfflineImage.png" />
     <Content Include="Resources\Padlock.png" />
+    <Content Include="Resources\PrevButton.png" />
+    <Content Include="Resources\PrevButton_Hover.png" />
     <Content Include="Resources\Server.png" />
     <Content Include="Resources\Server_Hover.png" />
     <Content Include="Resources\Server_Pressed.png" />
