--- a/H1EMU-Launcher/H1EMU-Launcher.csproj
+++ b/H1EMU-Launcher/H1EMU-Launcher.csproj
@@ -7,8 +7,8 @@
 	  <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Icon.ico</ApplicationIcon>
-	  <AssemblyVersion>2.0.4</AssemblyVersion>
-	  <FileVersion>2.0.4</FileVersion>
+	  <AssemblyVersion>2.0.5</AssemblyVersion>
+	  <FileVersion>2.0.5</FileVersion>
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
@@ -161,7 +161,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="bin\Debug\net5.0-windows7.0\" />
+    <Folder Include="bin\Debug\net5.0-windows7.0\Language\" />
   </ItemGroup>
 
 </Project>
