--- a/H1EMU-Launcher/H1EMU-Launcher.csproj
+++ b/H1EMU-Launcher/H1EMU-Launcher.csproj
@@ -7,8 +7,8 @@
 	  <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Icon.ico</ApplicationIcon>
-	  <AssemblyVersion>2.0.5</AssemblyVersion>
-	  <FileVersion>2.0.5</FileVersion>
+	  <AssemblyVersion>2.0.6</AssemblyVersion>
+	  <FileVersion>2.0.6</FileVersion>
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Page Remove="Resources\StringResources.fr-FR.xaml" />
     <Page Remove="Resources\StringResources.hr.xaml" />
+    <Page Remove="Resources\StringResources.tr-TR.xaml" />
     <Page Remove="Resources\StringResources.xaml" />
     <Page Remove="Resources\StringResources.zh-cn.xaml" />
   </ItemGroup>
