--- a/H1EMU-Launcher/H1EMU-Launcher.csproj
+++ b/H1EMU-Launcher/H1EMU-Launcher.csproj
@@ -7,8 +7,8 @@
 	  <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Icon.ico</ApplicationIcon>
-	  <AssemblyVersion>2.0.6</AssemblyVersion>
-	  <FileVersion>2.0.6</FileVersion>
+	  <AssemblyVersion>2.0.7</AssemblyVersion>
+	  <FileVersion>2.0.7</FileVersion>
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
@@ -63,8 +63,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Page Remove="Resources\StringResources.bg-BG.xaml" />
     <Page Remove="Resources\StringResources.fr-FR.xaml" />
     <Page Remove="Resources\StringResources.hr.xaml" />
+    <Page Remove="Resources\StringResources.pl-PL.xaml" />
+    <Page Remove="Resources\StringResources.ru-RU.xaml" />
     <Page Remove="Resources\StringResources.tr-TR.xaml" />
     <Page Remove="Resources\StringResources.xaml" />
     <Page Remove="Resources\StringResources.zh-cn.xaml" />
