--- a/H1EMU-Launcher/H1EMU-Launcher.csproj
+++ b/H1EMU-Launcher/H1EMU-Launcher.csproj
@@ -7,8 +7,8 @@
 	  <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Icon.ico</ApplicationIcon>
-	  <AssemblyVersion>2.1.5</AssemblyVersion>
-	  <FileVersion>2.1.5</FileVersion>
+	  <AssemblyVersion>2.1.6</AssemblyVersion>
+	  <FileVersion>2.1.6</FileVersion>
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
@@ -65,6 +65,7 @@
   <ItemGroup>
     <Page Remove="Resources\StringResources.bg-BG.xaml" />
     <Page Remove="Resources\StringResources.de-DE.xaml" />
+    <Page Remove="Resources\StringResources.es-ES.xaml" />
     <Page Remove="Resources\StringResources.fr-FR.xaml" />
     <Page Remove="Resources\StringResources.hr.xaml" />
     <Page Remove="Resources\StringResources.nl-NL.xaml" />
