--- a/H1EMU-Launcher/Properties/Settings.settings
+++ b/H1EMU-Launcher/Properties/Settings.settings
@@ -29,5 +29,8 @@
     <Setting Name="sessionIdKey" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="firstTimeUse" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">0</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
