--- a/H1EMU-Launcher/H1EMU-Launcher.csproj
+++ b/H1EMU-Launcher/H1EMU-Launcher.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
 	  <OutputType>WinExe</OutputType>
-	  <TargetFramework>net5.0-windows7.0</TargetFramework>
+	  <TargetFramework>net5.0-windows</TargetFramework>
 	  <RootNamespace>H1EMU_Launcher</RootNamespace>
 	  <UseWPF>true</UseWPF>
 	  <UseWindowsForms>true</UseWindowsForms>
 	  <ApplicationIcon>Icon.ico</ApplicationIcon>
-	  <AssemblyVersion>2.2.9</AssemblyVersion>
-	  <FileVersion>2.2.9</FileVersion>
+	  <AssemblyVersion>2.3.0</AssemblyVersion>
+	  <FileVersion>2.3.0</FileVersion>
 	  <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
