--- a/H1EmuLauncher/Properties/Settings.settings
+++ b/H1EmuLauncher/Properties/Settings.settings
@@ -20,10 +20,7 @@
     <Setting Name="lastServer" Type="System.Int32" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
-    <Setting Name="currentPatchVersion2015" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="currentPatchVersion2016" Type="System.String" Scope="User">
+    <Setting Name="currentPatchVersion" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
     <Setting Name="sessionIdKey" Type="System.String" Scope="User">
